--- a/datos.html
+++ b/datos.html
@@ -1,29 +1,28 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pruebas</title>
-    <link rel="stylesheet" href="./styles.css">
+    <title>Datos</title>
+    <link rel="stylesheet" href="./datos.css">
 </head>
-
 <body>
 
     <div class="title title2">
         <h1>Lablanca<span>Netflix</span></h1>
     </div>
 
-    <div class="contenido" id="contenido"></div>
+    <div class="cont-sinopsis" id="cont-sinopsis">
+
+
+    </div>
 
     <div class="paginacion">
         <button class="atras" id="atras">Atrás</button>
         <div class="number-page" id="page">1</div>
         <button class="siguiente" id="siguiente">Siguiente</button>
     </div>
-
-
-    <script src="./script.js"></script>
+    
+    <script src="./datos.js"></script>
 </body>
-
 </html>
